fix: z-index 변경(nav가 최상위로)

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -30,7 +30,6 @@ a {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  z-index: 2;
   &::before {
     background: rgba(0, 0, 0, .5);
     content: '';
@@ -171,5 +170,6 @@ label {
     position: -webkit-sticky;
     top: 0px;
     margin-bottom: 10px;
+    z-index:1;
   }
 }
